champ de mdp caché

--- a/parc/src/app/login/login.component.html
+++ b/parc/src/app/login/login.component.html
@@ -8,9 +8,9 @@
         <mat-label>Nom</mat-label>
         <input matInput formControlName="name">
       </mat-form-field>
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill" input="password">
         <mat-label>Mot de passe</mat-label>
-        <input matInput formControlName="password">
+        <input matInput type="password" formControlName="password">
       </mat-form-field>
       <button mat-stroked-button type="submit">Connexion</button>
     </form>
