Gestion erreurs panel admin

--- a/parc/src/app/admin/admin.component.html
+++ b/parc/src/app/admin/admin.component.html
@@ -29,7 +29,7 @@
   
           <mat-form-field class="champ" appearance="fill">
             <mat-label>Difficulté / 5</mat-label>
-            <input matInput formControlName="difficulte" type="number">
+            <input matInput formControlName="difficulte" type="number" max="5">
           </mat-form-field>
 
           <mat-slide-toggle class="champ" formControlName="visible">Element visible</mat-slide-toggle>
