--- a/parc/src/app/app.component.html
+++ b/parc/src/app/app.component.html
@@ -1,8 +1,11 @@
 <mat-toolbar>
   <span><a routerLink="/accueil">Parc d'attraction</a></span>
-  <div *ngIf="authService.isLoggedIn">
+  <div *ngIf="authService.isLoggedIn; else disconnected">
     <button mat-stroked-button (click)="logout()">Déconnexion</button>
   </div>
+  <ng-template #disconnected>
+    <button mat-stroked-button routerLink="/login">Connexion</button>
+  </ng-template>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
