--- a/parc/src/app/login/login.component.html
+++ b/parc/src/app/login/login.component.html
@@ -10,7 +10,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Mot de passe</mat-label>
-        <input matInput formControlName="password">
+        <input matInput type="password" formControlName="password">
       </mat-form-field>
       <button mat-stroked-button type="submit">Connexion</button>
     </form>
