Ajout critique Front

--- a/parc/src/app/critique/critique-block/critique-block.component.html
+++ b/parc/src/app/critique/critique-block/critique-block.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="isValidCritique()">
   <div>
     {{ critique?.prenom ?? 'Anonyme' }} {{ critique?.nom ?? '' }} a écrit :
   </div>
