Formulaire ajout critique

--- a/parc/src/app/critique/critique-block/critique-block.component.html
+++ b/parc/src/app/critique/critique-block/critique-block.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isValidCritique()">
   <div>
-    {{ critique?.prenom ?? 'Anonyme' }} {{ critique?.nom ?? '' }} a écrit :
+    {{ getDisplayedName() }} a écrit :
   </div>
   <div>
     {{ critique?.note }}/20
