--- a/parc/src/app/critique/critique-attraction/critique-attraction.component.html
+++ b/parc/src/app/critique/critique-attraction/critique-attraction.component.html
@@ -4,8 +4,12 @@
   </mat-card-header>
   <mat-card-content>
     <button mat-stroked-button (click)="openDialog()">Ajouter</button>
-    <ng-container *ngFor="let critique of critiques">
+    <div *ngFor="let critique of critiques" class="critique-block-container">
       <app-critique-block [critique]="critique"></app-critique-block>
-    </ng-container>
+      <div *ngIf="isLoggedIn" class="critique-admin-container">
+        <button mat-stroked-button (click)="openDialog(critique)">Modifier</button>
+        <button mat-stroked-button color="warn" (click)="deleteCritique(critique)">Supprimer</button>
+      </div>
+    </div>
   </mat-card-content>
 </mat-card>
