--- a/parc/src/app/app.component.html
+++ b/parc/src/app/app.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar>
   <span><a routerLink="/accueil">Parc d'attraction</a></span>
-  <div *ngIf="authService.isLoggedIn">
-    <button mat-stroked-button (click)="logout()">Déconnexion</button>
+  <div *ngIf="authService.isLoggedIn; else notLogged">
+    <button mat-stroked-button (click)="logout()">Déconnexion</button>   
   </div>
+  <ng-template #notLogged> <button routerLink="/login">login</button></ng-template>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
