--- a/parc/src/app/accueil/avis.component.html
+++ b/parc/src/app/accueil/avis.component.html
@@ -1,22 +1,14 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Ajouter un avis</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <form>
-      <label for="nom">Nom :</label>
-      <input type="text" id="nom" name="nom" [(ngModel)]="nom" required>
-
-      <label for="prenom">Prénom :</label>
-      <input type="text" id="prenom" name="prenom" [(ngModel)]="prenom" required>
-
-      <label for="note">Note :</label>
-      <input type="number" id="note" name="note" [(ngModel)]="note" required>
-
-      <label for="avis">Avis :</label>
-      <textarea id="avis" name="avis" [(ngModel)]="avis" required></textarea>
-
-      <button type="submit" (click)="ajouterAvis()">Ajouter Avis</button>
-    </form>
-  </mat-card-content>
-</mat-card>
+<!-- avis.component.html -->
+<div *ngIf="avis && avis.length">
+  <h2>Avis de l'attraction</h2>
+  <ul>
+    <li *ngFor="let avisItem of avis">
+      <!-- <p>{{ avisItem.auteur }}</p> -->
+      <p>{{ avisItem.commentaire }}</p>
+      <p>Note : {{ avisItem.note }}/5</p>
+    </li>
+  </ul>
+</div>
+<div *ngIf="!avis || avis.length === 0">
+  <p>Aucun avis disponible pour cette attraction.</p>
+</div>
