--- a/parc/src/app/critique/critique-attraction/critique-attraction.component.html
+++ b/parc/src/app/critique/critique-attraction/critique-attraction.component.html
@@ -1,6 +1,9 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Critiques pour l'attraction {{ getAttractionName() }}</mat-card-title>
+    <mat-card-title>
+      Critiques pour l'attraction {{ getAttractionName() }} |
+      Note moyenne : {{mean | number:'1.0-2'}}
+    </mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <button mat-stroked-button (click)="openDialog()">Ajouter</button>
