--- a/parc/src/app/avis/avis.component.html
+++ b/parc/src/app/avis/avis.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Avis de l'attractionm</mat-card-title>
+    <mat-card-title>Avis de l'attraction</mat-card-title>
+    <button mat-button (click)="openDialog()"> Ajouter</button>
   </mat-card-header>
   <mat-card-content>
     <div class="attraction-title">
