--- a/parc/src/app/avis/avis.component.scss
+++ b/parc/src/app/avis/avis.component.scss
@@ -1,6 +1,6 @@
 .avis {
   display:flex;
-  background-color: lightgray;
+  flex-direction: column;
   border-radius: 3px;
   border-color: black;
 }
