--- a/parc/src/app/critique/critique-block/critique-block.component.html
+++ b/parc/src/app/critique/critique-block/critique-block.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isValidCritique()" class="critique-container">
   <span class="critique-name">
-    <b> {{ getDisplayedName() | titlecase }} </b> a écrit :
+    <b> {{ getDisplayedName() | async | titlecase }} </b> {{ "CRITICS_PAGE.WROTE" | translate }} :
   </span>
   <div class="critique-main-block">
     {{ critique?.note }}/20
