Suppression trucs inutiles

--- a/parc/src/app/accueil/accueil.component.html
+++ b/parc/src/app/accueil/accueil.component.html
@@ -16,7 +16,7 @@
         <span>{{attraction.nom}}</span>
         <span>{{attraction.description}}</span>
         <span>{{attraction.difficulte}} / 5</span>
-        <span><button mat-stroked-button routerLink="/attraction/{{attraction.attraction_id}}/avis">Avis</button></span>
+        <span style="text-align: center;"><button mat-stroked-button routerLink="/attraction/{{attraction.attraction_id}}/avis">Avis</button></span>
       </div>
     </ng-container>
   </mat-card-content>
